@@ -14,6 +14,7 @@ Current git version
     client decorations, one does not see the frame decoration behind but the
     wallpaper instead)
   * The setting +monitors_locked+ is now explicitly an unsigned integer.
+  * The setting 'default_frame_layout' now holds an algorithm name.
   * Bug fixes:
     - Fix mistakenly transparent borders of argb clients
   * New dependency: xrender
